@@ -13,6 +13,7 @@
 - Update matching number highlighting to be less aggressive
 - Update earmark highlighting to the new accent color palette
 - Add strike-through for earmark warnings
+- Add large zoom size for earmarks
 - Add pause animation
 - Add short animation to autoclean earmarks
 - Add headerbar transition effect
